Analizador_semantico/gen/Bcc_GrammarParser.java
// Generated from C:/Users/daniela/Documents/Universidad/Semestre 8/Lenguajes/Programing_lenguages/Analizador_semantico/grammar\Bcc_Grammar.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Bcc_GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		End=1, Print=2, Input=3, When=4, If=5, Unless=6, While=7, Return=8, Until=9, 
		Loop=10, Do=11, Else=12, Repeat=13, For=14, Next=15, Break=16, Not=17, 
		And=18, Or=19, Var=20, Function=21, Tk_type=22, Tk_bool=23, Tk_num=24, 
		ID=25, FID=26, Tk_diferente=27, Tk_mod=28, Tk_mod_asig=29, Tk_par_izq=30, 
		Tk_par_der=31, Tk_mul=32, Tk_mul_asig=33, Tk_mas=34, Tk_incremento=35, 
		Tk_sum_asig=36, Tk_coma=37, Tk_menos=38, Tk_decremento=39, Tk_res_asig=40, 
		Tk_div=41, Tk_div_asig=42, Tk_dospuntos=43, Tk_asignacion=44, Tk_puntoycoma=45, 
		Tk_menor=46, Tk_menor_igual=47, Tk_igualdad=48, Tk_mayor=49, Tk_mayor_igual=50, 
		Tk_llave_izq=51, Tk_llave_der=52, ESP=53, Directive=54;
	public static final int
		RULE_prog = 0, RULE_main_prog = 1, RULE_fn_decl_list = 2, RULE_var_decl = 3, 
		RULE_stmt_block = 4, RULE_stmt = 5, RULE_lexpr = 6, RULE_nexpr = 7, RULE_rexpr = 8, 
		RULE_simple_expr = 9, RULE_term = 10, RULE_factor = 11;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "main_prog", "fn_decl_list", "var_decl", "stmt_block", "stmt", 
			"lexpr", "nexpr", "rexpr", "simple_expr", "term", "factor"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'end'", "'print'", "'input'", "'when'", "'if'", "'unless'", "'while'", 
			"'return'", "'until'", "'loop'", "'do'", "'else'", "'repeat'", "'for'", 
			"'next'", "'break'", "'not'", "'and'", "'or'", "'var'", "'function'", 
			null, null, null, null, null, "'!='", "'%'", "'%='", "'('", "')'", "'*'", 
			"'*='", "'+'", "'++'", "'+='", "','", "'-'", "'--'", "'-='", "'/'", "'/='", 
			"':'", "':='", "';'", "'<'", "'<='", "'=='", "'>'", "'>='", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "End", "Print", "Input", "When", "If", "Unless", "While", "Return", 
			"Until", "Loop", "Do", "Else", "Repeat", "For", "Next", "Break", "Not", 
			"And", "Or", "Var", "Function", "Tk_type", "Tk_bool", "Tk_num", "ID", 
			"FID", "Tk_diferente", "Tk_mod", "Tk_mod_asig", "Tk_par_izq", "Tk_par_der", 
			"Tk_mul", "Tk_mul_asig", "Tk_mas", "Tk_incremento", "Tk_sum_asig", "Tk_coma", 
			"Tk_menos", "Tk_decremento", "Tk_res_asig", "Tk_div", "Tk_div_asig", 
			"Tk_dospuntos", "Tk_asignacion", "Tk_puntoycoma", "Tk_menor", "Tk_menor_igual", 
			"Tk_igualdad", "Tk_mayor", "Tk_mayor_igual", "Tk_llave_izq", "Tk_llave_der", 
			"ESP", "Directive"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Bcc_Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Bcc_GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public Main_progContext main_prog() {
			return getRuleContext(Main_progContext.class,0);
		}
		public List<Fn_decl_listContext> fn_decl_list() {
			return getRuleContexts(Fn_decl_listContext.class);
		}
		public Fn_decl_listContext fn_decl_list(int i) {
			return getRuleContext(Fn_decl_listContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Bcc_GrammarListener ) ((Bcc_GrammarListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Bcc_GrammarListener ) ((Bcc_GrammarListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Bcc_GrammarVisitor ) return ((Bcc_GrammarVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(27);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Function) {
				{
				{
				setState(24);
				fn_decl_list();
				}
				}
				setState(29);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(30);
			main_prog();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Main_progContext extends ParserRuleContext {
		public TerminalNode End() { return getToken(Bcc_GrammarParser.End, 0); }
		public TerminalNode Var() { return getToken(Bcc_GrammarParser.Var, 0); }
		public Var_declContext var_decl() {
			return getRuleContext(Var_declContext.class,0);
		}
		public TerminalNode Tk_puntoycoma() { return getToken(Bcc_GrammarParser.Tk_puntoycoma, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public Main_progContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Bcc_GrammarListener ) ((Bcc_GrammarListener)listener).enterMain_prog(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Bcc_GrammarListener ) ((Bcc_GrammarListener)listener).exitMain_prog(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Bcc_GrammarVisitor ) return ((Bcc_GrammarVisitor<? extends T>)visitor).visitMain_prog(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Main_progContext main_prog() throws RecognitionException {
		Main_progContext _localctx = new Main_progContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Var:
				{
				setState(32);
				match(Var);
				setState(33);
				var_decl();
				setState(34);
				match(Tk_puntoycoma);
				}
				break;
			case End:
			case Print:
			case Input:
			case When:
			case If:
			case Unless:
			case While:
			case Return:
			case Until:
			case Loop:
			case Do:
			case Repeat:
			case For:
			case Next:
			case Break:
			case ID:
			case Tk_incremento:
			case Tk_decremento:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Print) | (1L << Input) | (1L << When) | (1L << If) | (1L << Unless) | (1L << While) | (1L << Return) | (1L << Until) | (1L << Loop) | (1L << Do) | (1L << Repeat) | (1L << For) | (1L << Next) | (1L << Break) | (1L << ID) | (1L << Tk_incremento) | (1L << Tk_decremento))) != 0)) {
				{
				{
				setState(39);
				stmt();
				}
				}
				setState(44);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(45);
			match(End);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Fn_decl_listContext extends ParserRuleContext {
		public TerminalNode Function() { return getToken(Bcc_GrammarParser.Function, 0); }
		public TerminalNode FID() { return getToken(Bcc_GrammarParser.FID, 0); }
		public TerminalNode Tk_dospuntos() { return getToken(Bcc_GrammarParser.Tk_dospuntos, 0); }
		public TerminalNode Tk_type() { return getToken(Bcc_GrammarParser.Tk_type, 0); }
		public TerminalNode Tk_par_izq() { return getToken(Bcc_GrammarParser.Tk_par_izq, 0); }
		public TerminalNode Tk_par_der() { return getToken(Bcc_GrammarParser.Tk_par_der, 0); }
		public Stmt_blockContext stmt_block() {
			return getRuleContext(Stmt_blockContext.class,0);
		}
		public List<Var_declContext> var_decl() {
			return getRuleContexts(Var_declContext.class);
		}
		public Var_declContext var_decl(int i) {
			return getRuleContext(Var_declContext.class,i);
		}
		public TerminalNode Var() { return getToken(Bcc_GrammarParser.Var, 0); }
		public TerminalNode Tk_puntoycoma() { return getToken(Bcc_GrammarParser.Tk_puntoycoma, 0); }
		public Fn_decl_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fn_decl_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Bcc_GrammarListener ) ((Bcc_GrammarListener)listener).enterFn_decl_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Bcc_GrammarListener ) ((Bcc_GrammarListener)listener).exitFn_decl_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Bcc_GrammarVisitor ) return ((Bcc_GrammarVisitor<? extends T>)visitor).visitFn_decl_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Fn_decl_listContext fn_decl_list() throws RecognitionException {
		Fn_decl_listContext _localctx = new Fn_decl_listContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_fn_decl_list);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			match(Function);
			setState(48);
			match(FID);
			setState(49);
			match(Tk_dospuntos);
			setState(50);
			match(Tk_type);
			setState(51);
			match(Tk_par_izq);
			setState(54);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				{
				setState(52);
				var_decl();
				}
				break;
			case Tk_par_der:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(56);
			match(Tk_par_der);
			setState(62);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Var:
				{
				setState(57);
				match(Var);
				setState(58);
				var_decl();
				setState(59);
				match(Tk_puntoycoma);
				}
				break;
			case Print:
			case Input:
			case When:
			case If:
			case Unless:
			case While:
			case Return:
			case Until:
			case Loop:
			case Do:
			case Repeat:
			case For:
			case Next:
			case Break:
			case ID:
			case Tk_incremento:
			case Tk_decremento:
			case Tk_llave_izq:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(64);
			stmt_block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_declContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(Bcc_GrammarParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(Bcc_GrammarParser.ID, i);
		}
		public List<TerminalNode> Tk_dospuntos() { return getTokens(Bcc_GrammarParser.Tk_dospuntos); }
		public TerminalNode Tk_dospuntos(int i) {
			return getToken(Bcc_GrammarParser.Tk_dospuntos, i);
		}
		public List<TerminalNode> Tk_type() { return getTokens(Bcc_GrammarParser.Tk_type); }
		public TerminalNode Tk_type(int i) {
			return getToken(Bcc_GrammarParser.Tk_type, i);
		}
		public List<TerminalNode> Tk_coma() { return getTokens(Bcc_GrammarParser.Tk_coma); }
		public TerminalNode Tk_coma(int i) {
			return getToken(Bcc_GrammarParser.Tk_coma, i);
		}
		public Var_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Bcc_GrammarListener ) ((Bcc_GrammarListener)listener).enterVar_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Bcc_GrammarListener ) ((Bcc_GrammarListener)listener).exitVar_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Bcc_GrammarVisitor ) return ((Bcc_GrammarVisitor<? extends T>)visitor).visitVar_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_declContext var_decl() throws RecognitionException {
		Var_declContext _localctx = new Var_declContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_var_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(ID);
			setState(67);
			match(Tk_dospuntos);
			setState(68);
			match(Tk_type);
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Tk_coma) {
				{
				{
				setState(69);
				match(Tk_coma);
				setState(70);
				match(ID);
				setState(71);
				match(Tk_dospuntos);
				setState(72);
				match(Tk_type);
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Stmt_blockContext extends ParserRuleContext {
		public TerminalNode Tk_llave_izq() { return getToken(Bcc_GrammarParser.Tk_llave_izq, 0); }
		public TerminalNode Tk_llave_der() { return getToken(Bcc_GrammarParser.Tk_llave_der, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public Stmt_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Bcc_GrammarListener ) ((Bcc_GrammarListener)listener).enterStmt_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Bcc_GrammarListener ) ((Bcc_GrammarListener)listener).exitStmt_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Bcc_GrammarVisitor ) return ((Bcc_GrammarVisitor<? extends T>)visitor).visitStmt_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Stmt_blockContext stmt_block() throws RecognitionException {
		Stmt_blockContext _localctx = new Stmt_blockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_stmt_block);
		int _la;
		try {
			setState(87);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Tk_llave_izq:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				match(Tk_llave_izq);
				setState(80); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(79);
					stmt();
					}
					}
					setState(82); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Print) | (1L << Input) | (1L << When) | (1L << If) | (1L << Unless) | (1L << While) | (1L << Return) | (1L << Until) | (1L << Loop) | (1L << Do) | (1L << Repeat) | (1L << For) | (1L << Next) | (1L << Break) | (1L << ID) | (1L << Tk_incremento) | (1L << Tk_decremento))) != 0) );
				setState(84);
				match(Tk_llave_der);
				}
				break;
			case Print:
			case Input:
			case When:
			case If:
			case Unless:
			case While:
			case Return:
			case Until:
			case Loop:
			case Do:
			case Repeat:
			case For:
			case Next:
			case Break:
			case ID:
			case Tk_incremento:
			case Tk_decremento:
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				stmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public TerminalNode Print() { return getToken(Bcc_GrammarParser.Print, 0); }
		public List<LexprContext> lexpr() {
			return getRuleContexts(LexprContext.class);
		}
		public LexprContext lexpr(int i) {
			return getRuleContext(LexprContext.class,i);
		}
		public List<TerminalNode> Tk_puntoycoma() { return getTokens(Bcc_GrammarParser.Tk_puntoycoma); }
		public TerminalNode Tk_puntoycoma(int i) {
			return getToken(Bcc_GrammarParser.Tk_puntoycoma, i);
		}
		public TerminalNode Input() { return getToken(Bcc_GrammarParser.Input, 0); }
		public TerminalNode ID() { return getToken(Bcc_GrammarParser.ID, 0); }
		public TerminalNode When() { return getToken(Bcc_GrammarParser.When, 0); }
		public TerminalNode Tk_par_izq() { return getToken(Bcc_GrammarParser.Tk_par_izq, 0); }
		public TerminalNode Tk_par_der() { return getToken(Bcc_GrammarParser.Tk_par_der, 0); }
		public TerminalNode Do() { return getToken(Bcc_GrammarParser.Do, 0); }
		public List<Stmt_blockContext> stmt_block() {
			return getRuleContexts(Stmt_blockContext.class);
		}
		public Stmt_blockContext stmt_block(int i) {
			return getRuleContext(Stmt_blockContext.class,i);
		}
		public TerminalNode If() { return getToken(Bcc_GrammarParser.If, 0); }
		public TerminalNode Else() { return getToken(Bcc_GrammarParser.Else, 0); }
		public TerminalNode While() { return getToken(Bcc_GrammarParser.While, 0); }
		public TerminalNode Return() { return getToken(Bcc_GrammarParser.Return, 0); }
		public TerminalNode Unless() { return getToken(Bcc_GrammarParser.Unless, 0); }
		public TerminalNode Until() { return getToken(Bcc_GrammarParser.Until, 0); }
		public TerminalNode Loop() { return getToken(Bcc_GrammarParser.Loop, 0); }
		public TerminalNode Repeat() { return getToken(Bcc_GrammarParser.Repeat, 0); }
		public TerminalNode Tk_num() { return getToken(Bcc_GrammarParser.Tk_num, 0); }
		public TerminalNode Tk_dospuntos() { return getToken(Bcc_GrammarParser.Tk_dospuntos, 0); }
		public TerminalNode For() { return getToken(Bcc_GrammarParser.For, 0); }
		public TerminalNode Next() { return getToken(Bcc_GrammarParser.Next, 0); }
		public TerminalNode Break() { return getToken(Bcc_GrammarParser.Break, 0); }
		public TerminalNode Tk_asignacion() { return getToken(Bcc_GrammarParser.Tk_asignacion, 0); }
		public TerminalNode Tk_sum_asig() { return getToken(Bcc_GrammarParser.Tk_sum_asig, 0); }
		public TerminalNode Tk_res_asig() { return getToken(Bcc_GrammarParser.Tk_res_asig, 0); }
		public TerminalNode Tk_mul_asig() { return getToken(Bcc_GrammarParser.Tk_mul_asig, 0); }
		public TerminalNode Tk_div_asig() { return getToken(Bcc_GrammarParser.Tk_div_asig, 0); }
		public TerminalNode Tk_mod_asig() { return getToken(Bcc_GrammarParser.Tk_mod_asig, 0); }
		public TerminalNode Tk_incremento() { return getToken(Bcc_GrammarParser.Tk_incremento, 0); }
		public TerminalNode Tk_decremento() { return getToken(Bcc_GrammarParser.Tk_decremento, 0); }
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Bcc_GrammarListener ) ((Bcc_GrammarListener)listener).enterStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Bcc_GrammarListener ) ((Bcc_GrammarListener)listener).exitStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Bcc_GrammarVisitor ) return ((Bcc_GrammarVisitor<? extends T>)visitor).visitStmt(this);
			else return visitor.visitChildren(this);
		}
	}
